--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -182,4 +182,16 @@ nav {
         color:#000;
     }
  }
+ .discosTotales{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 30px;
+ }
+ .discos{
+     width: 300px;
+     height: 300px;
+ }
 }
