--- a/css/style.css
+++ b/css/style.css
@@ -701,10 +701,10 @@ footer {
 
   .discosTotales {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 30px;
   }
 
@@ -718,6 +718,25 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+
+  .centrarBoton {
+    text-align: center;
+  }
+
+  .centrarForm {
+    text-align: center;
+    padding: 10px;
+    color: aquamarine;
+  }
+
+  h4 {
+    color: blueviolet;
+    text-align: center;
+    border: solid 2px;
+    border-style: dashed;
+    margin: 200px;
+    padding: 10px;
   }
 }
 
