--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -169,10 +169,10 @@ nav {
  }
  .discosTotales{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 30px;
  }
  .discos{
@@ -187,4 +187,20 @@ nav {
     justify-content: space-evenly;
 }
 
+.centrarBoton{
+    text-align: center;
+}
+.centrarForm{
+    text-align: center;
+    padding: 10px;
+    color: aquamarine;
+}
+h4{
+    color: blueviolet;
+    text-align: center;
+    border: solid 2px;
+    border-style: dashed;
+    margin: 200px;
+    padding: 10px;
+}
 }
