--- a/css7syle.css
+++ b/css7syle.css
@@ -699,25 +699,9 @@ footer {
     color: #000;
   }
 
-  /* Discos */
-  .primerosDiscos {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
-  .segundosDiscos {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
   .discosTotales {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
@@ -729,7 +713,6 @@ footer {
     height: 300px;
   }
 
-  /* Botones*/
   .botones {
     text-align: center;
     display: flex;
@@ -743,6 +726,7 @@ footer {
     justify-content: center;
     padding-top: 30px;
     padding-bottom: 30px;
+    background-color: white;
     margin-right: 600px;
     margin-bottom: 100px;
     margin-left: 600px;
@@ -768,32 +752,9 @@ footer {
     text-align: center;
   }
 
-  /* Buscador*/
   .buscador {
-    margin-right: 100px;
-    text-align: end;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-
-  /*merchandising*/
-  h6 {
-    color: black;
-    text-align: center;
-  }
-
-  .tarjetas {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-right: 100px;
-    margin-left: 100px;
-    margin-bottom: 100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    margin-right: 50px;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=css7syle.css.map */
