--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -167,9 +167,23 @@ nav {
         color:#000;
     }
  }
+ /* Discos */
+ .primerosDiscos{
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: space-evenly;
+ }
+ .segundosDiscos{
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: space-evenly;
+ }
  .discosTotales{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
@@ -179,7 +193,7 @@ nav {
      width: 300px;
      height: 300px;
  }
-
+/* Botones*/
 .botones{
     text-align: center;
     display: flex;
@@ -188,7 +202,14 @@ nav {
 }
 
 .centrarBoton{
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-right: 600px;
+    margin-bottom:100px ;
+    margin-left: 600px;
 }
 .centrarForm{
     text-align: center;
@@ -201,6 +222,34 @@ h4{
     border: solid 2px;
     border-style: dashed;
     margin: 200px;
+    margin-bottom: 100px;
     padding: 10px;
+}
+.aCentrar{
+    text-align: center;
+}
+/* Buscador*/
+.buscador{
+    margin-right: 100px;
+    text-align: end;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+/*merchandising*/
+h6{
+    color: black;
+    text-align: center;
+}
+.tarjetas{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 }
