--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -280,8 +280,9 @@ h4{
     text-align: center;
     border: solid 2px;
     border-style: dashed;
-    margin: 200px;
+    margin-right: 100px;
     margin-bottom: 100px;
+    margin-left: 100px;
     padding: 10px;
 }
 .aCentrar{
