--- a/css/style.css
+++ b/css/style.css
@@ -823,8 +823,9 @@ footer {
     text-align: center;
     border: solid 2px;
     border-style: dashed;
-    margin: 200px;
+    margin-right: 100px;
     margin-bottom: 100px;
+    margin-left: 100px;
     padding: 10px;
   }
 
