--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,16 @@ footer {
     margin-left: 600px;
   }
 
+  .centrarBoton2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 60px;
+    margin-right: 600px;
+    margin-bottom: 100px;
+    margin-left: 650px;
+  }
+
   .centrarForm {
     text-align: center;
     padding: 10px;
