--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -270,6 +270,15 @@ nav {
     margin-bottom:100px ;
     margin-left: 600px;
 }
+.centrarBoton2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 60px;
+    margin-right: 600px;
+    margin-bottom:100px ;
+    margin-left: 650px;
+}
 .centrarForm{
     text-align: center;
     padding: 10px;
