--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@ h3 {
 
 /*Footer*/
 footer {
-  color: #FFFFFF;
   text-align: center;
   padding-top: 50px;
 }
@@ -301,13 +300,24 @@ footer {
 
   /* Fin de página*/
   footer {
-    color: #FFFFFF;
+    background-color: #000000;
     text-align: center;
     padding-top: 20px;
   }
   footer .derechos {
+    background-color: #000000;
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+
+  .volver {
+    display: flex;
+    flex-direction: row-reverse;
+    text-align: center;
+    font-size: 24px;
+    margin-right: 10%;
+    color: #FFFFFF;
+    text-decoration: none;
   }
 }
 /* Discos */
@@ -732,50 +742,11 @@ footer {
   .cart {
     position: fixed;
     top: 30%;
-    left: 60%;
+    left: 38%;
     width: fit-content;
     color: black;
     background-color: grey;
-    font-size: smaller;
-    border-radius: 10px;
-    border-style: solid;
-    opacity: 80%;
-  }
-
-  .cart-1 {
-    position: fixed;
-    top: 30%;
-    right: 60%;
-    width: fit-content;
-    color: black;
-    background-color: grey;
-    font-size: smaller;
-    border-radius: 10px;
-    border-style: solid;
-    opacity: 80%;
-  }
-
-  .cart-2 {
-    position: fixed;
-    bottom: 5%;
-    right: 60%;
-    width: fit-content;
-    color: black;
-    background-color: grey;
-    font-size: smaller;
-    border-radius: 10px;
-    border-style: solid;
-    opacity: 80%;
-  }
-
-  .cart-3 {
-    position: fixed;
-    bottom: 5%;
-    left: 60%;
-    width: fit-content;
-    color: black;
-    background-color: grey;
-    font-size: smaller;
+    font-size: 16px;
     border-radius: 10px;
     border-style: solid;
     opacity: 80%;
@@ -868,6 +839,18 @@ footer {
     margin-bottom: 100px;
     padding-top: 50px;
     padding-bottom: 50px;
+  }
+
+  /*productos locales*/
+  .productosLocales {
+    background-color: aquamarine;
+    color: black;
+    border-radius: 10%;
+    padding: 40px;
+    text-align: center;
+    margin-right: 30%;
+    margin-bottom: 10%;
+    margin-left: 30%;
   }
 }
 
